# trading_codex

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: presets.example.json  stage2_shadow_ops.json
docs/: ASSISTANT_BRIEF.md  BOOTSTRAP_PROMPT.md  BOOTSTRAP_PROMPT.txt  CODEX_BRAIN_CUTOVER_CHECKLIST.md  DAILY_TRADING_RUNBOOK.md  FIRST_LIVE_EXIT_CRITERIA.md  FIRST_LIVE_PROGRAM.md  IBKR_PAPERTRADER_BRINGUP.md  IBKR_PAPER_LANE.md  MANUAL_ALERT_WORKFLOW.md  PRESET_BEHAVIOR_REFERENCE.md  PROJECT_STATE.md  PROMOTION_RUNBOOK.md  STAGE2_IBKR_PAPER_OPS.md  STAGE2_PAPER_OPS.md  STAGE2_SHADOW_OPS.md  STRATEGY_REGISTRY.md  TASTYTRADE_SANDBOX_CAPABILITY.md  WORKFLOW.md
scripts/: daily_signal.py  daily_summary.py  evaluate_vol_overlay.py  fetch_bars.py  ibkr_paper_bringup.py  ibkr_paper_lane.py  ibkr_paper_lane_daily_ops.py  ibkr_paper_lane_daily_ops_preflight.py  ibkr_paper_ops_review.py  ibkr_shadow_loop.py  ibkr_shadow_paper.py  list_runs.py  live_canary_guardrails.py  live_canary_shadow_rehearsal.py  live_canary_state_ops.py  next_action_alert.py  paper_lane.py  paper_lane_daily_ops.py  plan_execution.py  promote_from_builder.sh  review_dashboard.py  review_dashboard_detached.py  run_backtest.py  scheduled_dual_compare.py  shadow_validate_dual_mom_vol10_cash.py  stage2_shadow_compare.py  stage2_shadow_daily_ops.py  tastytrade_sandbox_capability.py  test_ibkr_connection.py  update_data_eod.py
tests/: conftest.py  live_canary_approval_helpers.py  test_backtest_costs.py  test_cli_args.py  test_config_rebalance_anchor.py  test_contracts_next_action_stdout_event_id.py  (+72 more)
(+70 files in other folders)
